--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A `AdonisJS` service Provider which wraps `Papa Parse`, a powerful CSV parser .",
   "main": "index.js",
   "scripts": {
-    "test": "node japaFile.js"
+    "test": "node japaFile.js",
+    "commit": "git cz"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,13 @@
   "devDependencies": {
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/sink": "^1.0.17",
+    "cz-conventional-changelog": "^2.1.0",
     "japa": "^2.0.7",
     "japa-cli": "^1.0.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
