--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
     "papaparse": "^5.0.0-beta.0"
   },
   "devDependencies": {
+    "@adonisjs/ace": "^5.0.8",
+    "@adonisjs/bodyparser": "^2.0.9",
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/sink": "^1.0.17",
+    "@adonisjs/validator": "^5.0.6",
     "cz-conventional-changelog": "^2.1.0",
     "japa": "^2.0.7",
-    "japa-cli": "^1.0.1"
+    "japa-cli": "^1.0.1",
+    "macroable": "^2.0.1",
+    "supertest": "^3.4.2"
   },
   "config": {
     "commitizen": {
